resources/resource/temporary_permissions: fixed bulk date fieldset visibility depending on the bulk checkbox state, re #7509
git-svn-id: svn://develop.studip.de/studip/trunk@56443 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/scss/resources.scss
+++ b/resources/assets/stylesheets/scss/resources.scss
@@ -109,6 +109,20 @@ ul.resource-tree {
     }
 }
 
+/* temporary permission list */
+
+#resource-temporary-permissions {
+    fieldset.bulk-datetime {
+        display: none;
+    }
+
+    input.bulk-datetime-enable:checked ~ fieldset.bulk-datetime {
+        display: block;
+    }
+}
+
+/* desktop view */
+
 @media all and (min-width: 800px) {
     form.resource-search {
         display: flex;
